# zebra-rs

./: .gitignore  Cargo.toml  README.md  build.rs  diff-since.sh  fuzz.sh  lib.rs  run-tests.sh  test_output_original.txt  test_output_rust.txt  unsafe-stats.sh
booktool/: Cargo.toml
booktool/src/: booktool.rs
crates/coeff/: Cargo.toml
crates/enddev/: Cargo.toml
crates/enddev/src/: enddev.rs
crates/engine/: Cargo.toml  lib.rs
crates/engine/src/: end.rs  error.rs  eval.rs  game.rs  getcoeff.rs  globals.rs  learn.rs  moves.rs  probcut.rs  thordb.rs  timer.rs  zebra.rs
crates/flate2-coeff-source/: Cargo.toml  lib.rs
crates/legacy-zebra/: Cargo.toml  lib.rs
crates/legacy-zebra/src/: display.rs  error.rs  game.rs  getcoeff.rs  learn.rs  main.rs  osfbook.rs  thordb.rs  zebra.rs
crates/tune8db/: Cargo.toml
crates/tune8db/src/: tune8db.rs
engine/: Cargo.toml  lib.rs
engine/bitbcnt/: bitbcnt.rs  lib.rs
engine/bitboard/: Cargo.toml  bitbmob.rs  bitboard.rs  bitbtest.rs  lib.rs
engine/coeff/: Cargo.toml  getcoeff.rs
engine/engine-traits/: Cargo.toml  lib.rs
engine/epcstat/: Cargo.toml  epcstat.rs
engine/flip/: Cargo.toml  doflip.rs  lib.rs  unflip.rs
engine/my-random/: Cargo.toml  myrandom.rs
engine/patterns/: patterns.rs
engine/pcstat/: pcstat.rs
engine/src/: bitbcnt.rs  bitbmob.rs  bitboard.rs  bitbtest.rs  cntflip.rs  counter.rs  display.rs  doflip.rs  end.rs  epcstat.rs  error.rs  eval.rs  game.rs  getcoeff.rs  globals.rs  hash.rs  learn.rs  midgame.rs  moves.rs  myrandom.rs  opname.rs  osfbook.rs  pcstat.rs  probcut.rs  safemem.rs  search.rs  stable.rs  stubs.rs  thordb.rs  timer.rs  unflip.rs  zebra.rs
engine/thor-opening-list/: Cargo.toml  thor_opening_list.rs
engine/thordb-types/: Cargo.toml  thordb-types.rs
legacy-zebra/: Cargo.toml  lib.rs
legacy-zebra/src/: display.rs  error.rs  game.rs  getcoeff.rs  learn.rs  osfbook.rs  safemem.rs  thordb.rs  zebra.rs
legacy-zebra/zlib-coeff-source/: Cargo.toml  lib.rs
scrzebra/: Cargo.toml
scrzebra/src/: scrzebra.rs
tests/: Cargo.toml
tests/resources/: board.txt  seq-file-invalid.txt  seq-file-too-long.txt  seq-file.txt  seqfile-fuzzer-1
tests/snapshot-tests/: test-commands.txt
tests/snapshot-tests/f1_1055/: command.txt
tests/snapshot-tests/f1_1091/: command.txt
tests/snapshot-tests/f1_1104/: command.txt
tests/snapshot-tests/f1_1160/: command.txt  seq.txt
tests/snapshot-tests/f1_1181/: command.txt
tests/snapshot-tests/f1_1307/: command.txt
tests/snapshot-tests/f1_1331/: command.txt
tests/snapshot-tests/f1_1354/: command.txt
tests/snapshot-tests/f1_1358/: command.txt
tests/snapshot-tests/f1_1364/: command.txt
tests/snapshot-tests/f1_1371/: command.txt
tests/snapshot-tests/f1_1380/: board.txt  command.txt
tests/snapshot-tests/f1_1382/: board.txt  command.txt
tests/snapshot-tests/f1_1399/: command.txt
tests/snapshot-tests/f1_1412/: board.txt  command.txt
tests/snapshot-tests/f1_143/: command.txt
tests/snapshot-tests/f1_1448/: command.txt
tests/snapshot-tests/f1_1455/: command.txt
tests/snapshot-tests/f1_1459/: command.txt
tests/snapshot-tests/f1_1486/: board.txt  command.txt
tests/snapshot-tests/f1_1494/: command.txt
tests/snapshot-tests/f1_1559/: command.txt
tests/snapshot-tests/f1_1571/: command.txt
tests/snapshot-tests/f1_1580/: command.txt
tests/snapshot-tests/f1_1584/: command.txt
tests/snapshot-tests/f1_1615/: board.txt  command.txt
tests/snapshot-tests/f1_1628/: command.txt
tests/snapshot-tests/f1_1638/: command.txt
tests/snapshot-tests/f1_1692/: command.txt  seq.txt
tests/snapshot-tests/f1_1695/: command.txt
tests/snapshot-tests/f1_1708/: board.txt  command.txt
tests/snapshot-tests/f1_1734/: board.txt  command.txt
tests/snapshot-tests/f1_1794/: command.txt
tests/snapshot-tests/f1_1854/: board.txt  command.txt
tests/snapshot-tests/f1_1887/: command.txt  seq.txt
tests/snapshot-tests/f1_1892/: command.txt  seq.txt
tests/snapshot-tests/f1_1896/: command.txt
tests/snapshot-tests/f1_1936/: board.txt  command.txt
tests/snapshot-tests/f1_1980/: command.txt
tests/snapshot-tests/f1_1989/: command.txt  seq.txt
tests/snapshot-tests/f1_2000/: board.txt  command.txt
tests/snapshot-tests/f1_2054/: command.txt
tests/snapshot-tests/f1_2179/: command.txt
tests/snapshot-tests/f1_2230/: board.txt  command.txt
tests/snapshot-tests/f1_2235/: board.txt  command.txt
tests/snapshot-tests/f1_2344/: command.txt
tests/snapshot-tests/f1_235/: board.txt  command.txt
tests/snapshot-tests/f1_2435/: command.txt
tests/snapshot-tests/f1_2446/: command.txt
tests/snapshot-tests/f1_247/: command.txt
tests/snapshot-tests/f1_2478/: board.txt  command.txt
tests/snapshot-tests/f1_2516/: command.txt
tests/snapshot-tests/f1_2535/: command.txt
tests/snapshot-tests/f1_2575/: command.txt
tests/snapshot-tests/f1_2588/: command.txt
tests/snapshot-tests/f1_2589/: board.txt  command.txt
tests/snapshot-tests/f1_2590/: board.txt  command.txt
tests/snapshot-tests/f1_2627/: board.txt  command.txt
tests/snapshot-tests/f1_2726/: board.txt  command.txt
tests/snapshot-tests/f1_2749/: command.txt
tests/snapshot-tests/f1_2773/: command.txt
tests/snapshot-tests/f1_2774/: command.txt
tests/snapshot-tests/f1_2788/: command.txt
tests/snapshot-tests/f1_2857/: board.txt  (+1 more)
tests/snapshots/: zebra.log-minus_p_zero_without_book-with-adjust  zebra.log-no_exact_no_wld  zebra.log-no_exact_no_wld-with-adjust  zebra.log-no_wld  zebra.log-small_game_test  zebra.log-small_game_test_without_book  zebra.log-with_hash_twelve  zebra.log-with_hash_twelve-with-adjust  zebra.log-with_repeat  zebra.log-with_repeat_and_log  zebra.log-with_seq-with-adjust  zebra.log-with_seq_invalid-with-adjust  zebra.log-with_some_slack-with-adjust  zebra.log-wld_only  zebra.log-wld_only-with-adjust  zebra.logminus_p_zero  zebra.logminus_p_zero_without_book
tests/src/: main.rs
thor-opening-list/: Cargo.toml
wasm-simple/: Cargo.toml  index.html  main.js  package.json  webpack.config.js  worker.js
wasm-simple/src/: lib.rs
webzebra/crate/: Cargo.toml
(+681 files in other folders)
