[workspace]
members = [
    "engine",
    "booktool",
    "tune8db",
    "scrzebra",
    "practice",
    "enddev",
    "wasm-simple",
    "engine/bitboard",
    "engine/pcstat",
    "engine/epcstat",
    "engine/bitbcnt",
    "engine/patterns",
    "engine/thordb-types",
    "thor-opening-list",
    "libc-wrapper",
    "engine/engine-traits",
    "flate2-coeff-source",
    "legacy-zebra",
    "tests",
    "legacy-zebra/zlib-coeff-source",
    "engine/flip",
    "engine/coeff",
    "script"
]

[profile.release]
opt-level = 3
lto = "thin"
overflow-checks = true
incremental=true

[profile.dev]
opt-level = 0
lto="thin"
