[workspace]
members = [
    "engine",
    "booktool",
    "tune8db",
    "scrzebra",
    "practice",
    "enddev",
    "engine/bitboard",
    "engine/pcstat",
    "engine/epcstat",
    "engine/bitbcnt",
    "engine/patterns",
    "engine/thordb-types",
    "engine/my-random",
    "thor-opening-list",
    "libc-wrapper",
    "engine/engine-traits",
    "flate2-coeff-source",
    "legacy-zebra",
    "tests",
    "legacy-zebra/zlib-coeff-source",
    "engine/flip",
    "engine/coeff",
    "script",
    "webzebra/crate"
]

[profile.release]
opt-level = 3
lto = "thin"
overflow-checks = true
incremental=true

[profile.dev]
opt-level = 2
lto="thin"
