[workspace]
members = [
    "engine",
    "booktool",
    "tune8db",
    "scrzebra",
    "practice",
    "enddev",
    "engine/bitboard",
    "engine/pcstat",
    "engine/epcstat",
    "engine/bitbcnt",
    "engine/patterns",
    "engine/thordb-types",
    "engine/my-random",
    "thor-opening-list",
    "libc-wrapper",
    "engine/engine-traits",
    "flate2-coeff-source",
    "legacy-zebra",
    "tests",
    "engine/flip",
    "engine/coeff",
    "script",
    "webzebra/crate"
]

[profile.release]
opt-level = 3
lto = "thin"
overflow-checks = true
incremental=true
debug=false

[profile.dev]
opt-level = 0
lto=false
