[package]
name = "engine"
version = "0.1.0"
authors = ["panstromek"]
edition = "2018"

[lib]
name = "engine"
path = "lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitboard = { path = "bitboard"}
pcstat = { path = "pcstat"}
epcstat = { path = "epcstat"}
bitbcnt = { path = "bitbcnt"}
engine-traits = { path = "engine-traits" }
