[package]
name = "legacy-zebra"
version = "0.1.0"
authors = ["panstromek <panstromek@seznam.cz>"]
edition = "2018"
publish = false
autobins = false

[lib]
name = "legacy_zebra"
path = "lib.rs"
crate-type = ["staticlib", "rlib"]


[[bin]]
path = "src/main.rs"
name = "zebra"

[dependencies]
engine = { path = "./../engine" }
thordb-types = { path = "./../engine/thordb-types" }
flip = { path = "./../engine/flip" }
libc-wrapper = { path = "./../libc-wrapper" }
engine-traits = { path = "./../engine/engine-traits" }
zlib-coeff-source = { path = "./zlib-coeff-source" }
thor-opening-list = { path = "./../thor-opening-list" }
