[package]
name = "tests"
version = "0.1.0"
authors = ["panstromek <panstromek@seznam.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
flate2-coeff-source = { path = "./../flate2-coeff-source" }
engine-traits = { path = "./../engine/engine-traits" }
c2rust_out = { path = "./../" }
