[package]
name = "tests"
version = "0.1.0"
authors = ["panstromek <panstromek@seznam.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
flate2-coeff-source = { path = "./../flate2-coeff-source" }
engine-traits = { path = "./../engine/engine-traits" }
rand = "0.8.3"
wait-timeout = "0.2.0"
rayon = "1.5.0"