[package]
name = "thor-opening-list"
version = "0.1.0"
authors = ["panstromek <panstromek@seznam.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "thor_opening_list"
path = "thor_opening_list.rs"

[dependencies]
thordb-types = { path = "./../engine/thordb-types"}