[package]
name = "wasm-simple"
version = "0.1.0"
authors = ["panstromek <panstromek@seznam.cz>"]
edition = "2018"

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.67"
engine = { path= "./../engine" }
engine-traits = { path = "./../engine/engine-traits" }
