[package]
name = "coeff"
version = "0.1.0"
authors = ["panstromek <panstromek@seznam.cz>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name="coeff"
path= "getcoeff.rs"
[dependencies]
engine-traits = { path = "../engine-traits" }