[package]
name = "enddev"
version = "0.1.0"
authors = ["panstromek <panstromek@seznam.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
engine = { path= "../engine" }
flip = { path= "../flip" }
legacy-zebra = { path= "../legacy-zebra" }
libc = "0.2"
libc-wrapper = { path = "../libc-wrapper" }

[[bin]]
path = "src/enddev.rs"
name = "enddev"
