[package]
name = "legacy-zebra"
version = "0.1.0"
authors = ["panstromek <panstromek@seznam.cz>"]
edition = "2024"
publish = false
autobins = false

[lib]
name = "legacy_zebra"
path = "lib.rs"
crate-type = ["staticlib", "rlib"]


[[bin]]
path = "src/main.rs"
name = "zebra"

[dependencies]
engine = { path = "../engine" }
thordb-types = { path = "../thordb-types" }
flip = { path = "../flip" }
libc-wrapper = { path = "../libc-wrapper" }
engine-traits = { path = "../engine-traits" }
thor-opening-list = { path = "../thor-opening-list" }
flate2-coeff-source = { path = "../flate2-coeff-source" }
