[package]
name = "tune8db"
version = "0.1.0"
authors = ["panstromek <panstromek@seznam.cz>"]
edition = "2018"


[[bin]]
path = "src/tune8db.rs"
name = "tune8db"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc-wrapper = { path = "../libc-wrapper" }