[package]
name = "zlib-coeff-source"
version = "0.1.0"
authors = ["panstromek <panstromek@seznam.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "zlib_coeff_source"
path = "lib.rs"

[dependencies]
engine-traits = { path = "./../../engine/engine-traits"}
libc-wrapper = { path = "./../../libc-wrapper"}